--- a/d.html
+++ b/d.html
@@ -9,9 +9,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Lijia Yu" />
 
+<meta name="date" content="2022-01-17" />
 
-<title>About Me</title>
+<title>Lijia Yu’s resume</title>
 
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -278,45 +280,163 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">Lijia Yu’s resume</h1>
+<h4 class="author">Lijia Yu</h4>
+<h4 class="date">2022-01-17</h4>
 
 </div>
 
 
-<center>
-<div id="hi-im-jiwon-baik." class="section level1">
-<h1>Hi, I’m Jiwon Baik.</h1>
-<p><img src="img/profile.jpg" /></p>
-<hr />
-<p>Hi, my name is Jiwon Baik.</p>
-<p>Thank you for visiting my portfolio webpage :)</p>
-<hr />
-</center>
+<div id="aside" class="section level1">
+<h1>Aside</h1>
+<div class="figure">
+<img src="https://avatars1.githubusercontent.com/u/895125?s=400&amp;v=4" style="width:80.0%" alt="" />
+<p class="caption">Lijia Yu</p>
+</div>
+<div id="contact" class="section level2">
+<h2>Contact Info</h2>
 <ul>
-<li>Education</li>
+<li><i class="fa fa-envelope"></i> <a href="mailto:lijia.yu@outlook.com" class="email">lijia.yu@outlook.com</a></li>
+<li><i class="fa fa-github"></i> <a href="https://github.com/yulijia">github.com/yulijia</a></li>
+<li><i class="fa fa-phone"></i> +1 000-000-0000</li>
+<li>For more information, please contact me via email.</li>
 </ul>
-<p>I’m a master student in UCSB, studying Geography and Applied Statistics.</p>
-<p>I finished master in Geography with an emphasis on spatial optimization in 2021.</p>
-<p>I’ll finish another master in Applied Statistics on June, 2022.</p>
+</div>
+<div id="skills" class="section level2">
+<h2>Skills</h2>
 <ul>
-<li>Projects</li>
+<li><p>Experienced in statistical analysis, statistical learning models, and optimization methods.</p></li>
+<li><p>Full experience with next generation sequencing data analysis.</p></li>
+<li><p>Highly skilled in R, Bash, Perl, Python, LaTeX</p></li>
 </ul>
-<p>I am proficient in Python, and R.</p>
-<p>I’ve done 3D spatial modeling,</p>
-<p>In the <a href="https://JiwonBaik96.github.io/portfolio.html">Portfolio</a> page, you could read details and source codes of my projects.</p>
+</div>
+<div id="disclaimer" class="section level2">
+<h2>Disclaimer</h2>
+<p>This resume was made with the R package <a href="https://github.com/rstudio/pagedown"><strong>pagedown</strong></a>.</p>
+<p>Last updated on 2022-01-17.</p>
+</div>
+</div>
+<div id="main" class="section level1">
+<h1>Main</h1>
+<div id="title" class="section level2">
+<h2>Lijia Yu</h2>
+<div id="currently-searching-for-a-phd-student-position" class="section level3">
+<h3>Currently searching for a PhD student position</h3>
+<p>Please note that this is a <em>real</em> resume, and I’m really looking for a PhD student position at the moment. I made this resume because Yihui asked me if I’d like to test the <strong>pagedown</strong> package with my resume. If you are interested in my background and skills, please feel free to contact me.</p>
+</div>
+</div>
+<div id="education" class="section level2" data-icon="graduation-cap" data-concise="true">
+<h2>Education</h2>
+<div id="beijing-university-of-chemical-technology" class="section level3">
+<h3>Beijing University of Chemical Technology</h3>
+<p>B.S. in Information and Computing Sciences</p>
+<p>Beijing, China</p>
+<p>2010</p>
+<p>Thesis: Dyadic wavelet and its application in edge detection</p>
+</div>
+<div id="university-of-chinese-academy-of-sciences" class="section level3">
+<h3>University of Chinese Academy of Sciences</h3>
+<p>M.S. in Bioinformatics</p>
+<p>Beijing, China</p>
+<p>2014</p>
+<p>Thesis: A multi-omics study for intra-individual divergence of the distributions between mRNA isoforms in mammals</p>
+</div>
+</div>
+<div id="research-experience" class="section level2" data-icon="laptop">
+<h2>Research Experience</h2>
+<div id="graduate-research-assistant" class="section level3">
+<h3>Graduate Research Assistant</h3>
+<p>Beijing Institute of Genomics, Chinese Academy of Sciences</p>
+<p>Beijing, China</p>
+<p>2011 - 2014</p>
 <ul>
-<li>Teaching</li>
+<li>Performed computational biology research towards understanding regulation of alternative splicing in human and mouse transcriptome.</li>
+<li>Found EGFR pathway related mutations, aimed to understand the impacts of cancer mutations on EGFR signaling pathway.</li>
 </ul>
-<p>My undergrad major was Geography and Education.</p>
-<p>I taught GIS (Geographic Information Science) using ArcGIS Pro and R.</p>
-<p>I’m the best evaluated TA in the Geography department, and having national teacher’s license in Korea.</p>
+</div>
+<div id="bioinformatican" class="section level3">
+<h3>Bioinformatican</h3>
+<p>My Health Gene Technology Co., Ltd.</p>
+<p>Beijing, China</p>
+<p>2015 - 2016</p>
 <ul>
-<li>Hobbies</li>
+<li>Investigated how cancer cells spread to other parts of the body at the single cell level.</li>
 </ul>
-<p>I enjoy surfing, poker and baking.</p>
-<p>if you want to know personal me, you can visit my instagram.</p>
-<p>instagram: <span class="citation">@miracle_jay0____0</span> (<a href="https://www.instagram.com/miracle_jay0____0" class="uri">https://www.instagram.com/miracle_jay0____0</a>)</p>
-<hr />
+</div>
+<div id="visiting-scientist" class="section level3">
+<h3>Visiting Scientist</h3>
+<p>University of Alabama at Birmingham</p>
+<p>AL, USA</p>
+<p>2016 - 2018</p>
+<ul>
+<li>Investigated the role of mitochondria in development of cancer.</li>
+<li>Investigated the evolution of genome architecture and its role in important evolutionary events.</li>
+<li>Detected thrombotic thrombocytopenic purpura related mutations in mutiple patients’ blood genome.</li>
+</ul>
+</div>
+</div>
+<div id="professional-experience" class="section level2" data-icon="suitcase">
+<h2>Professional Experience</h2>
+<div id="data-scientist-intern" class="section level3">
+<h3>Data Scientist, intern</h3>
+<p>SupStat Inc.</p>
+<p>Beijing, China</p>
+<p>2014</p>
+<div class="concise">
+<ul>
+<li>Taught R language to beginners.</li>
+<li>Wrote Shiny app demos.</li>
+<li>Converted statistical tutorials from SPSS to R language.</li>
+</ul>
+</div>
+</div>
+<div id="bioinformatician" class="section level3">
+<h3>Bioinformatician</h3>
+<p>My Health Gene Technology Co., Ltd.</p>
+<p>Beijing, China</p>
+<p>2015 - 2016</p>
+<div class="concise">
+<ul>
+<li>Analyzed whole-exome sequencing data.</li>
+<li>Wrote analysis pipelines of ChIP-seq, single cell DNA-seq and single cell RNA-seq.</li>
+<li>Studied tumor metastasis and wrote research reports.</li>
+<li>Also did case studies to identify the genetic defect causing rare disease.</li>
+</ul>
+</div>
+</div>
+</div>
+<div id="teaching-experience" class="section level2" data-icon="chalkboard-teacher">
+<h2>Teaching Experience</h2>
+<div id="introduction-to-r-language-for-beginners." class="section level3">
+<h3>Introduction to R Language for Beginners.</h3>
+<p>Instructor of R and Data Mining Training Courses at SupStat Inc.</p>
+<p>Beijing, China</p>
+<p>2014</p>
+</div>
+<div id="computational-biology-and-bioinformatics." class="section level3">
+<h3>Computational Biology and Bioinformatics.</h3>
+<p>Teaching assistant of GBS CB2-201 courses at UAB</p>
+<p>AL, USA</p>
+<p>2016 - 2017</p>
+</div>
+</div>
+<div id="selected-publications-and-posters" class="section level2" data-icon="file">
+<h2>Selected Publications and Posters</h2>
+<div id="genetic-and-epigenetic-signals-are-found-predictive-to-the-distribution-of-intra-individual-divergence-of-alternative-splicing." class="section level3">
+<h3>Genetic and epigenetic signals are found predictive to the distribution of intra-individual divergence of alternative splicing.</h3>
+<p>Poster for 2013 International Conference of Genomics</p>
+<p>Qingdao, China</p>
+<p>2014</p>
+<p><strong>Yu L</strong>, Chen B, Zhang Z.</p>
+</div>
+<div id="escrt-0-complex-modulates-rbf-mutant-cell-survival-by-regulating-rhomboid-endosomal-trafficking-and-egfr-signaling." class="section level3">
+<h3>ESCRT-0 complex modulates Rbf mutant cell survival by regulating Rhomboid endosomal trafficking and EGFR signaling.</h3>
+<p>J Cell Sci. 2016 May 15;129(10):2075-84.</p>
+<p>N/A</p>
+<p>2016</p>
+<p>Sheng Z, <strong>Yu L</strong>, Zhang T, Pei X, Li X, Zhang Z and Du W.</p>
+</div>
+</div>
 </div>
 
 
