--- a/portfolio.html
+++ b/portfolio.html
@@ -11,14 +11,17 @@
 
 
 
-<title>Projects</title>
+<title>Portfolio</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/simplex.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
+<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
@@ -104,33 +107,33 @@ summary {
 <style type="text/css">
 /* padding for bootstrap navbar */
 body {
-  padding-top: 41px;
+  padding-top: 64px;
   padding-bottom: 40px;
 }
 /* offset scroll position for anchor links (for fixed navbar)  */
 .section h1 {
-  padding-top: 46px;
-  margin-top: -46px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 .section h2 {
-  padding-top: 46px;
-  margin-top: -46px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 .section h3 {
-  padding-top: 46px;
-  margin-top: -46px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 .section h4 {
-  padding-top: 46px;
-  margin-top: -46px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 .section h5 {
-  padding-top: 46px;
-  margin-top: -46px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 .section h6 {
-  padding-top: 46px;
-  margin-top: -46px;
+  padding-top: 69px;
+  margin-top: -69px;
 }
 .dropdown-submenu {
   position: relative;
@@ -250,6 +253,69 @@ $(document).ready(function () {
 
 
 
+<style type="text/css">
+
+#TOC {
+  margin: 25px 0px 20px 0px;
+}
+@media (max-width: 768px) {
+#TOC {
+  position: relative;
+  width: 100%;
+}
+}
+
+@media print {
+.toc-content {
+  /* see https://github.com/w3c/csswg-drafts/issues/4434 */
+  float: right;
+}
+}
+
+.toc-content {
+  padding-left: 30px;
+  padding-right: 40px;
+}
+
+div.main-container {
+  max-width: 1200px;
+}
+
+div.tocify {
+  width: 20%;
+  max-width: 260px;
+  max-height: 85%;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  div.tocify {
+    width: 25%;
+  }
+}
+
+@media (max-width: 767px) {
+  div.tocify {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+.tocify ul, .tocify li {
+  line-height: 20px;
+}
+
+.tocify-subheader .tocify-item {
+  font-size: 0.90em;
+}
+
+.tocify .list-group-item {
+  border-radius: 0px;
+}
+
+
+</style>
+
+
 
 </head>
 
@@ -257,6 +323,16 @@ $(document).ready(function () {
 
 
 <div class="container-fluid main-container">
+
+
+<!-- setup 3col/9col grid for toc_float and main content  -->
+<div class="row-fluid">
+<div class="col-xs-12 col-sm-4 col-md-3">
+<div id="TOC" class="tocify">
+</div>
+</div>
+
+<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -287,10 +363,10 @@ $(document).ready(function () {
   <a href="teaching.html">GIS Teaching</a>
 </li>
 <li>
-  <a href="data/Resume_JiwonBaik.html">Resume</a>
+  <a href="contact.html">Contact</a>
 </li>
 <li>
-  <a href="contact.html">Contact</a>
+  <a href="resume.html">Resume</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -309,57 +385,252 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Projects</h1>
+<h1 class="title toc-ignore">Portfolio</h1>
 
 </div>
 
 
-<div id="d-acoustic-propagation-modeling" class="section level2">
-<h2>3d Acoustic Propagation Modeling</h2>
+<hr />
+<div id="contents" class="section level2">
+<h2>Contents</h2>
+<ul>
+<li>3D Map Features and Spatial Modeling
+<ul>
+<li>1.1. 3d Acoustic Propagation Modeling (ongoing)</li>
+<li>1.2. lab project: LIDAR</li>
+</ul></li>
+</ul>
+<p><br></p>
+<ul>
+<li>Javascript Map API and Web Building
+<ul>
+<li>2.1. Location based Theater and Movie finder</li>
+</ul></li>
+</ul>
+<p><br></p>
+<ul>
+<li>Python Visualization and Spatial Optimization
+<ul>
+<li>3.1. Fire Evacuation Maps (ongoing)</li>
+<li>3.2. Interactive map of Pareto Optimal solutions</li>
+<li>3.3. Finding Optimal Locations of Street Lights in LA</li>
+</ul></li>
+</ul>
+<p><br></p>
+<ul>
+<li>Spatial Statistical Analysis
+<ul>
+<li>4.1. GWR, Spatio-temporal Krigging, and Spline on Air Pollutants from Remote Sensed Data</li>
+<li>4.2. 2016 Election data analysis</li>
+</ul></li>
+</ul>
+<hr />
+</div>
+<div id="d-map-features-and-spatial-modeling" class="section level2">
+<h2>1. 3D Map Features and Spatial Modeling</h2>
+<hr />
+<div id="d-acoustic-propagation-modeling" class="section level3">
+<h3>1.1. 3d Acoustic Propagation Modeling</h3>
 <ul>
 <li><a href="data/Sound_Propagation_Model.pdf">presentation</a></li>
+<li><a href="data/SoundPropagation.html">sourcecode</a> : The sourcecode relies on arcpy module. The ipynb file should be operated within ArcGIS Pro, as an inserted Notebook.</li>
 </ul>
+<div class="warning" style="padding:0.1em; background-color:#E9D8FD; color:#69337A">
+<span>
+<p style="margin-top:1em; text-align:center">
+<b>On the importance of sentence length</b>
+</p>
+<p style="margin-left:1em;">
+This sentence has five words. Here are five more words. Five-word sentences are fine. But several together bocome monotonous. Listen to what is happening. The writing is getting boring. The sound of it drones. It’s like a stuck record. The ear demands some variety.<br><br> Now listen. I vary the sentence length, and I create music. Music. The writing sings. It has a pleasent rhythm, a lilt, a harmony. I use short sentences. And I use sentences of medium length. And sometimes when I am certain the reader is rested, I will engage him with a sentence of considerable length, a sentence that burns with energy and builds with all the impetus of a crescendo, the roll of the drums, the crash of the cymbals – sounds that say listen to this, it is important.
+</p>
+<p style="margin-bottom:1em; margin-right:1em; text-align:right; font-family:Georgia">
+<b>- Gary Provost</b> <i>(100 Ways to Improve Your Writing, 1985)</i>
+</p>
+<p></span></p>
 </div>
-<div id="location-based-theater-and-movie-finder" class="section level2">
-<h2>Location based Theater and Movie finder</h2>
+<center>
+<div class="figure">
+<img src="img/sound/3dbuildings.PNG" alt="" />
+<p class="caption">3d buildings</p>
 </div>
-<div id="fire-evacuation-maps" class="section level2">
-<h2>Fire Evacuation Maps</h2>
+<div class="figure">
+<img src="img/sound/3dmap.PNG" alt="" />
+<p class="caption">3dmap</p>
+</div>
+<div class="figure">
+<img src="img/sound/model.PNG" alt="" />
+<p class="caption">model</p>
+</div>
+<div class="figure">
+<img src="img/sound/result.PNG" alt="" />
+<p class="caption">result</p>
+</div>
+</center>
+<hr />
+</div>
+</div>
+<div id="javascript-map-api-and-web-building" class="section level2">
+<h2>2. Javascript Map API and Web Building</h2>
+<hr />
+<div id="location-based-theater-and-movie-finder" class="section level3">
+<h3>2.1. Location based Theater and Movie finder</h3>
+<div id="team-project" class="section level4">
+<h4>[Team project]</h4>
+<ul>
+<li><a href="https://moviestock.herokuapp.com/movies/" target="_blank">moviestock website</a></li>
+</ul>
+<div class="warning" style="padding:0.1em; background-color:#E9D8FD; color:#69337A">
+<span>
+<p style="margin-top:1em; text-align:center">
+<b>On the importance of sentence length</b>
+</p>
+<p style="margin-left:1em;">
+This sentence has five words. Here are five more words. Five-word sentences are fine. But several together bocome monotonous. Listen to what is happening. The writing is getting boring. The sound of it drones. It’s like a stuck record. The ear demands some variety.<br><br> Now listen. I vary the sentence length, and I create music. Music. The writing sings. It has a pleasent rhythm, a lilt, a harmony. I use short sentences. And I use sentences of medium length. And sometimes when I am certain the reader is rested, I will engage him with a sentence of considerable length, a sentence that burns with energy and builds with all the impetus of a crescendo, the roll of the drums, the crash of the cymbals – sounds that say listen to this, it is important.
+</p>
+<p style="margin-bottom:1em; margin-right:1em; text-align:right; font-family:Georgia">
+<b>- Gary Provost</b> <i>(100 Ways to Improve Your Writing, 1985)</i>
+</p>
+<p></span></p>
+</div>
+<hr />
+</div>
+</div>
+</div>
+<div id="python-visualization-and-spatial-optimization" class="section level2">
+<h2>3. Python Visualization and Spatial Optimization</h2>
+<hr />
+<div id="fire-evacuation-maps" class="section level3">
+<h3>3.1. Fire Evacuation Maps</h3>
+<ul>
+<li><a href="data/FireEvacuation_ppt.pdf">presentation</a></li>
+<li><a href="data/FireEvacuation_report.pdf">report</a></li>
+</ul>
+<div class="warning" style="padding:0.1em; background-color:#E9D8FD; color:#69337A">
+<span>
+<p style="margin-top:1em; text-align:center">
+<b>On the importance of sentence length</b>
+</p>
+<p style="margin-left:1em;">
+This sentence has five words. Here are five more words. Five-word sentences are fine. But several together bocome monotonous. Listen to what is happening. The writing is getting boring. The sound of it drones. It’s like a stuck record. The ear demands some variety.<br><br> Now listen. I vary the sentence length, and I create music. Music. The writing sings. It has a pleasent rhythm, a lilt, a harmony. I use short sentences. And I use sentences of medium length. And sometimes when I am certain the reader is rested, I will engage him with a sentence of considerable length, a sentence that burns with energy and builds with all the impetus of a crescendo, the roll of the drums, the crash of the cymbals – sounds that say listen to this, it is important.
+</p>
+<p style="margin-bottom:1em; margin-right:1em; text-align:right; font-family:Georgia">
+<b>- Gary Provost</b> <i>(100 Ways to Improve Your Writing, 1985)</i>
+</p>
+<p></span></p>
+</div>
+<div class="figure">
+<img src="img/fire/network.PNG" alt="" />
+<p class="caption">network processing</p>
+</div>
 <p><img src="data/1_staggered.gif" /><!-- --></p>
+<hr />
 </div>
-<div id="interactive-map-of-pareto-optimal-solutions" class="section level2">
-<h2>Interactive map of Pareto Optimal solutions</h2>
+<div id="interactive-map-of-pareto-optimal-solutions" class="section level3">
+<h3>3.2. Interactive map of Pareto Optimal solutions</h3>
+<div class="warning" style="padding:0.1em; background-color:#E9D8FD; color:#69337A">
+<span>
+<p style="margin-top:1em; text-align:center">
+<b>On the importance of sentence length</b>
+</p>
+<p style="margin-left:1em;">
+This sentence has five words. Here are five more words. Five-word sentences are fine. But several together bocome monotonous. Listen to what is happening. The writing is getting boring. The sound of it drones. It’s like a stuck record. The ear demands some variety.<br><br> Now listen. I vary the sentence length, and I create music. Music. The writing sings. It has a pleasent rhythm, a lilt, a harmony. I use short sentences. And I use sentences of medium length. And sometimes when I am certain the reader is rested, I will engage him with a sentence of considerable length, a sentence that burns with energy and builds with all the impetus of a crescendo, the roll of the drums, the crash of the cymbals – sounds that say listen to this, it is important.
+</p>
+<p style="margin-bottom:1em; margin-right:1em; text-align:right; font-family:Georgia">
+<b>- Gary Provost</b> <i>(100 Ways to Improve Your Writing, 1985)</i>
+</p>
+<p></span></p>
 </div>
-<div id="geographic-weighted-regression-of-aods-using-remote-sense-data" class="section level2">
-<h2>Geographic Weighted Regression of AODs using Remote Sense Data</h2>
-<ul>
-<li><a href="data/GWR_Spline.pdf">report</a></li>
-</ul>
+<p><img src="img/thesis/nondominated.png" alt="nondominated" />] <img src="img/thesis/nondominated.png" alt="solution algorithm" />]</p>
+<hr />
 </div>
-<div id="election-data-analysis" class="section level2">
-<h2>2016 Election data analysis</h2>
-<ul>
-<li><a href="data/2016ElectionCodes.html">sourcecode</a></li>
-<li><a href="data/2016ElectionReport.pdf">report</a></li>
-</ul>
-</div>
-<div id="finding-optimal-locations-of-street-lights-in-la" class="section level2">
-<h2>Finding Optimal Locations of Street Lights in LA</h2>
+<div id="finding-optimal-locations-of-street-lights-in-la" class="section level3">
+<h3>3.3. Finding Optimal Locations of Street Lights in LA</h3>
 <ul>
 <li><a href="data/StreetLightAllocation.html">sourcecode</a></li>
 </ul>
+<p>Interactive maps can be found within the sourcecode</p>
+<div class="warning" style="padding:0.1em; background-color:#E9D8FD; color:#69337A">
+<span>
+<p style="margin-top:1em; text-align:center">
+<b>On the importance of sentence length</b>
+</p>
+<p style="margin-left:1em;">
+This sentence has five words. Here are five more words. Five-word sentences are fine. But several together bocome monotonous. Listen to what is happening. The writing is getting boring. The sound of it drones. It’s like a stuck record. The ear demands some variety.<br><br> Now listen. I vary the sentence length, and I create music. Music. The writing sings. It has a pleasent rhythm, a lilt, a harmony. I use short sentences. And I use sentences of medium length. And sometimes when I am certain the reader is rested, I will engage him with a sentence of considerable length, a sentence that burns with energy and builds with all the impetus of a crescendo, the roll of the drums, the crash of the cymbals – sounds that say listen to this, it is important.
+</p>
+<p style="margin-bottom:1em; margin-right:1em; text-align:right; font-family:Georgia">
+<b>- Gary Provost</b> <i>(100 Ways to Improve Your Writing, 1985)</i>
+</p>
+<p></span></p>
+</div>
+<p><img src="img/streetlight/studyregion.jpg" alt="studyregion" /> <img src="img/streetlight/ACLPresult.png" alt="ACLPresult" /></p>
+<p>Detailed explanation with the sourcecodes can be found within the video below.</p>
 <center>
 <video width="480" height="320" controls>
 <source src="data/StreetLightAllocation.mp4" type="video/mp4">
 </video>
 </center>
+<hr />
+<hr />
 </div>
-<div id="time-series-analysis" class="section level2">
-<h2>Time Series Analysis</h2>
+</div>
+<div id="spatial-statistical-analysis" class="section level2">
+<h2>4. Spatial Statistical Analysis</h2>
+<hr />
+<div id="gwr-and-spline-on-air-pollutants-from-remote-sensed-data" class="section level3">
+<h3>4.1. GWR and Spline on Air Pollutants from Remote Sensed Data</h3>
+<div id="team-project-1" class="section level4">
+<h4>[Team project]</h4>
+<ul>
+<li><a href="data/GWR_Spline.pdf">report</a></li>
+</ul>
+<div class="warning" style="padding:0.1em; background-color:#E9D8FD; color:#69337A">
+<span>
+<p style="margin-top:1em; text-align:center">
+<b>On the importance of sentence length</b>
+</p>
+<p style="margin-left:1em;">
+This sentence has five words. Here are five more words. Five-word sentences are fine. But several together bocome monotonous. Listen to what is happening. The writing is getting boring. The sound of it drones. It’s like a stuck record. The ear demands some variety.<br><br> Now listen. I vary the sentence length, and I create music. Music. The writing sings. It has a pleasent rhythm, a lilt, a harmony. I use short sentences. And I use sentences of medium length. And sometimes when I am certain the reader is rested, I will engage him with a sentence of considerable length, a sentence that burns with energy and builds with all the impetus of a crescendo, the roll of the drums, the crash of the cymbals – sounds that say listen to this, it is important.
+</p>
+<p style="margin-bottom:1em; margin-right:1em; text-align:right; font-family:Georgia">
+<b>- Gary Provost</b> <i>(100 Ways to Improve Your Writing, 1985)</i>
+</p>
+<p></span></p>
+</div>
+<p><img src="img/krigging/variograms.png" alt="spatio-temporal krigging variograms" /> <img src="img/krigging/result.PNG" alt="result plot" /> <img src="img/krigging/resulttable.PNG" alt="result table" /> <img src="img/krigging/ROOCV.PNG" alt="ROOCV" /></p>
+</div>
+</div>
+<div id="election-data-analysis" class="section level3">
+<h3>4.2. 2016 Election data analysis</h3>
+<div id="team-project-2" class="section level4">
+<h4>[Team project]</h4>
+<ul>
+<li><a href="data/2016ElectionCodes.html">sourcecode</a></li>
+<li><a href="data/2016ElectionReport.pdf">report</a></li>
+</ul>
+<div class="warning" style="padding:0.1em; background-color:#E9D8FD; color:#69337A">
+<span>
+<p style="margin-top:1em; text-align:center">
+<b>On the importance of sentence length</b>
+</p>
+<p style="margin-left:1em;">
+This sentence has five words. Here are five more words. Five-word sentences are fine. But several together bocome monotonous. Listen to what is happening. The writing is getting boring. The sound of it drones. It’s like a stuck record. The ear demands some variety.<br><br> Now listen. I vary the sentence length, and I create music. Music. The writing sings. It has a pleasent rhythm, a lilt, a harmony. I use short sentences. And I use sentences of medium length. And sometimes when I am certain the reader is rested, I will engage him with a sentence of considerable length, a sentence that burns with energy and builds with all the impetus of a crescendo, the roll of the drums, the crash of the cymbals – sounds that say listen to this, it is important.
+</p>
+<p style="margin-bottom:1em; margin-right:1em; text-align:right; font-family:Georgia">
+<b>- Gary Provost</b> <i>(100 Ways to Improve Your Writing, 1985)</i>
+</p>
+<p></span></p>
+</div>
+<center>
+<p><img src="img/election/winnermap.PNG" /> <img src="img/election/winningprob.PNG" /> <img src="img/election/hierarchicalClustering.PNG" /></p>
+</center>
+</div>
+</div>
 </div>
 
 
 
+</div>
+</div>
 
 </div>
 
@@ -392,6 +663,32 @@ $(document).ready(function () {
 
 <!-- code folding -->
 
+<script>
+$(document).ready(function ()  {
+
+    // move toc-ignore selectors from section div to header
+    $('div.section.toc-ignore')
+        .removeClass('toc-ignore')
+        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
+
+    // establish options
+    var options = {
+      selectors: "h1,h2,h3",
+      theme: "bootstrap3",
+      context: '.toc-content',
+      hashGenerator: function (text) {
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
+      },
+      ignoreSelector: ".toc-ignore",
+      scrollTo: 0
+    };
+    options.showAndHide = true;
+    options.smoothScroll = true;
+
+    // tocify
+    var toc = $("#TOC").tocify(options).data("toc-tocify");
+});
+</script>
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
