--- a/teaching.html
+++ b/teaching.html
@@ -11,26 +11,42 @@
 
 
 
-<title>teaching.utf8</title>
+<title>GIS Teaching</title>
 
-<script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
+<script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/simplex.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<style>h1 {font-size: 34px;}
+       h1.title {font-size: 38px;}
+       h2 {font-size: 30px;}
+       h3 {font-size: 24px;}
+       h4 {font-size: 18px;}
+       h5 {font-size: 16px;}
+       h6 {font-size: 12px;}
+       code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
+       pre:not([class]) { background-color: white }</style>
+<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
+<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
-<style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
-  pre:not([class]) {
-    background-color: white;
-  }
-</style>
+  code{white-space: pre-wrap;}
+  span.smallcaps{font-variant: small-caps;}
+  span.underline{text-decoration: underline;}
+  div.column{display: inline-block; vertical-align: top; width: 50%;}
+  div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+  ul.task-list{list-style: none;}
+    </style>
+
+<style type="text/css">code{white-space: pre;}</style>
 <script type="text/javascript">
 if (window.hljs) {
   hljs.configure({languages: []});
@@ -43,32 +59,7 @@ if (window.hljs) {
 
 
 
-<style type="text/css">
-h1 {
-  font-size: 34px;
-}
-h1.title {
-  font-size: 38px;
-}
-h2 {
-  font-size: 30px;
-}
-h3 {
-  font-size: 24px;
-}
-h4 {
-  font-size: 18px;
-}
-h5 {
-  font-size: 16px;
-}
-h6 {
-  font-size: 12px;
-}
-.table th:not([align]) {
-  text-align: left;
-}
-</style>
+
 
 
 
@@ -78,10 +69,6 @@ h6 {
   max-width: 940px;
   margin-left: auto;
   margin-right: auto;
-}
-code {
-  color: inherit;
-  background-color: rgba(0, 0, 0, 0.04);
 }
 img {
   max-width:100%;
@@ -98,40 +85,13 @@ button.code-folding-btn:focus {
 summary {
   display: list-item;
 }
+pre code {
+  padding: 0;
+}
 </style>
 
 
 <style type="text/css">
-/* padding for bootstrap navbar */
-body {
-  padding-top: 41px;
-  padding-bottom: 40px;
-}
-/* offset scroll position for anchor links (for fixed navbar)  */
-.section h1 {
-  padding-top: 46px;
-  margin-top: -46px;
-}
-.section h2 {
-  padding-top: 46px;
-  margin-top: -46px;
-}
-.section h3 {
-  padding-top: 46px;
-  margin-top: -46px;
-}
-.section h4 {
-  padding-top: 46px;
-  margin-top: -46px;
-}
-.section h5 {
-  padding-top: 46px;
-  margin-top: -46px;
-}
-.section h6 {
-  padding-top: 46px;
-  margin-top: -46px;
-}
 .dropdown-submenu {
   position: relative;
 }
@@ -159,7 +119,7 @@ body {
   margin-right: -10px;
 }
 .dropdown-submenu:hover>a:after {
-  border-left-color: #ffffff;
+  border-left-color: #adb5bd;
 }
 .dropdown-submenu.pull-left {
   float: none;
@@ -171,7 +131,7 @@ body {
 }
 </style>
 
-<script>
+<script type="text/javascript">
 // manage active state of menu based on current page
 $(document).ready(function () {
   // active menu anchor
@@ -182,10 +142,23 @@ $(document).ready(function () {
   var menuAnchor = $('a[href="' + href + '"]');
 
   // mark it active
-  menuAnchor.parent().addClass('active');
+  menuAnchor.tab('show');
 
   // if it's got a parent navbar menu mark it active as well
   menuAnchor.closest('li.dropdown').addClass('active');
+
+  // Navbar adjustments
+  var navHeight = $(".navbar").first().height() + 15;
+  var style = document.createElement('style');
+  var pt = "padding-top: " + navHeight + "px; ";
+  var mt = "margin-top: -" + navHeight + "px; ";
+  var css = "";
+  // offset scroll position for anchor links (for fixed navbar)
+  for (var i = 1; i <= 6; i++) {
+    css += ".section h" + i + "{ " + pt + mt + "}\n";
+  }
+  style.innerHTML = "body {" + pt + "padding-bottom: 40px; }\n" + css;
+  document.head.appendChild(style);
 });
 </script>
 
@@ -197,7 +170,6 @@ $(document).ready(function () {
   max-height: 500px;
   min-height: 44px;
   overflow-y: auto;
-  background: white;
   border: 1px solid #ddd;
   border-radius: 4px;
 }
@@ -250,6 +222,69 @@ $(document).ready(function () {
 
 
 
+<style type="text/css">
+
+#TOC {
+  margin: 25px 0px 20px 0px;
+}
+@media (max-width: 768px) {
+#TOC {
+  position: relative;
+  width: 100%;
+}
+}
+
+@media print {
+.toc-content {
+  /* see https://github.com/w3c/csswg-drafts/issues/4434 */
+  float: right;
+}
+}
+
+.toc-content {
+  padding-left: 30px;
+  padding-right: 40px;
+}
+
+div.main-container {
+  max-width: 1200px;
+}
+
+div.tocify {
+  width: 20%;
+  max-width: 260px;
+  max-height: 85%;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  div.tocify {
+    width: 25%;
+  }
+}
+
+@media (max-width: 767px) {
+  div.tocify {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+.tocify ul, .tocify li {
+  line-height: 20px;
+}
+
+.tocify-subheader .tocify-item {
+  font-size: 0.90em;
+}
+
+.tocify .list-group-item {
+  border-radius: 0px;
+}
+
+
+</style>
+
+
 
 </head>
 
@@ -257,6 +292,16 @@ $(document).ready(function () {
 
 
 <div class="container-fluid main-container">
+
+
+<!-- setup 3col/9col grid for toc_float and main content  -->
+<div class="row">
+<div class="col-xs-12 col-sm-4 col-md-3">
+<div id="TOC" class="tocify">
+</div>
+</div>
+
+<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -287,10 +332,10 @@ $(document).ready(function () {
   <a href="teaching.html">GIS Teaching</a>
 </li>
 <li>
-  <a href="data/Resume_JiwonBaik.html">Resume</a>
+  <a href="contact.html">Contact</a>
 </li>
 <li>
-  <a href="contact.html">Contact</a>
+  <a href="resume.html">Resume</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -305,18 +350,43 @@ $(document).ready(function () {
   </div><!--/.container -->
 </div><!--/.navbar -->
 
-<div class="fluid-row" id="header">
+<div id="header">
 
 
 
+<h1 class="title toc-ignore">GIS Teaching</h1>
 
 </div>
 
 
-<div id="geog13_2021-and-geog-176a-2020" class="section level1">
-<h1>Geog13_2021 and GEOG 176A 2020</h1>
-<div id="instructor-mike-johnson-ta-jiwon-baik" class="section level4">
-<h4>instructor: Mike Johnson, TA: Jiwon Baik</h4>
+<style type="text/css">
+.spoiler {
+  visibility: hidden;
+}
+
+.spoiler::before {
+  visibility: visible;
+  content: "Spoiler alert! Hover me to see the answer."
+}
+
+.spoiler:hover {
+  visibility: visible;
+}
+
+.spoiler:hover::before {
+  display: none;
+}
+</style>
+<hr />
+<center>
+</center>
+<div id="geog13-2021-and-geog-176a-2020" class="section level2">
+<h2>Geog13 2021 and GEOG 176A 2020</h2>
+<div id="instructor-mike-johnson" class="section level4">
+<h4>instructor: Mike Johnson</h4>
+</div>
+<div id="ta-jiwon-baik" class="section level4">
+<h4>TA: Jiwon Baik</h4>
 <ul>
 <li>TAed for the class leading students to make the first project in the GIS programming class using R.</li>
 <li>Students to be familiar with R and Rstudio: what the basic logic is, and how to use it.</li>
@@ -327,53 +397,55 @@ $(document).ready(function () {
 <p>In the <strong>lab02</strong>, I worked with COVID-19 data in US, monitoring California’s daily new cases, plotting 4 interesting states’ changes of cases, and evaluating the pandemic trending on space and time. Here is the link of workflow.</p>
 </div>
 </div>
-<div id="covid-19-data-wrangling" class="section level1">
-<h1><a href="https://jiwonbaik96.github.io/geog-13-labs/lab-02.html">COVID-19 Data Wrangling</a></h1>
+<div id="covid-19-data-wrangling" class="section level2">
+<h2>COVID-19 Data Wrangling</h2>
 <ul>
 <li>I was familiar with Rstudio gradually from practices, for instance, analyzing raw data with packages and plotting, combination of raw data, and extracting the variables from raw data.</li>
 <li>In the COVID-19 data wrangling, I started to realize the relationship among data. Data will be influenced by other variables, chronologically and spatially.</li>
 <li>The structure of the code is important too. Well-structured code is easier to debug and present.</li>
 </ul>
-<p>Here is my highlight in the project: <img src="img/geo13-lab02highlight.png" /></p>
+<p>Here is my highlight in the project: <a href="https://jiwonbaik96.github.io/geog-13-labs/lab-02.html" target="_blank" title="click this image to open sourcecode"><img src="img/geo13-lab02highlight.png" /></a></p>
 <hr />
-<p>In the <strong>lab03</strong>, I figured out the geographic relationship between US cities and borders of national, states, and near countries. Then I evaluated the 100-mile Border Zone described in <a href="https://www.aclu.org/other/constitution-100-mile-border-zone">ACLU article</a>.</p>
+<p>In the <strong>lab03</strong>, I figured out the geographic relationship between US cities and borders of national, states, and near countries. Then I evaluated the 100-mile Border Zone described in <a href="https://www.aclu.org/other/constitution-100-mile-border-zone" target="_blank">ACLU article</a>.</p>
 </div>
-<div id="distances-and-the-border-zone" class="section level1">
-<h1><a href="https://jiwonbaik96.github.io/geog-13-labs/lab-03.html">Distances and the Border Zone</a></h1>
+<div id="distances-and-the-border-zone" class="section level2">
+<h2>Distances and the Border Zone</h2>
 <ul>
 <li>I learned how to build sf objects from R packages and CSVs, using computer to program the projection which studied in the Geog w12.</li>
 <li>In the project, I understand the calculation of distance between geographic objects, such as point, line string and area.</li>
 <li>And I can plot clear map with distance data by ggplot.</li>
 </ul>
-<p>Here is my highlight in the project: <img src="img/geo13-lab03highlight.png" /></p>
+<p>Here is my highlight in the project: <a href="https://jiwonbaik96.github.io/geog-13-labs/lab-03.html" target="_blank" title="click this image to open sourcecode"><img src="img/geo13-lab03highlight.png" /></a></p>
 <hr />
 <p>In the <strong>lab04</strong>, I started to analyze the geographic points in the polygon, with the functions defined by myself. With the raw data of dams in the United States, I tried to find the relationship between the dam distribution and geographic information.</p>
 </div>
-<div id="tesselations-point-in-polygon" class="section level1">
-<h1><a href="https://jiwonbaik96.github.io/geog-13-labs/lab-04.html">Tesselations, Point-in-Polygon</a></h1>
+<div id="tesselations-point-in-polygon" class="section level2">
+<h2>Tesselations, Point-in-Polygon</h2>
 <ul>
 <li>I understand how the tessellation works. Each tessellation has its own advantages and disadvantages, and different attributes.</li>
 <li>I analyze the dams data in the United States with the voronoi tessellation, defining the numbers of dam in each tiles. With the distribution of different types, I demonstrate the possible reasons of the distribution.</li>
 <li>And the leaflet map also be drawn, showing in largest and high_hazard dam in each state with Mississippi River System.</li>
 </ul>
-<p>Here is my highlight in the project: <img src="img/geo13-lab04highlight.png" /></p>
+<p>Here is my highlight in the project: <a href="https://jiwonbaik96.github.io/geog-13-labs/lab-04.html" target="_blank" title="click this image to open sourcecode"><img src="img/geo13-lab04highlight.png" /></a></p>
 <hr />
 <p>In the <strong>lab05</strong>, we learned to use raster layers to analyze the continuous data, a case of flooding in Palo, Iowa. We used the raster pacakge and raster data knowledge to create flood images using multiband Landsat Imagery, thresholding and classification methods.</p>
 </div>
-<div id="raster-and-remote-sensing" class="section level1">
-<h1><a href="https://jiwonbaik96.github.io/geog-13-labs/lab-05.html">Raster and Remote Sensing</a></h1>
+<div id="raster-and-remote-sensing" class="section level2">
+<h2>Raster and Remote Sensing</h2>
 <ul>
 <li>First time I deal with the continuous data with raster data model, and map algebra to analyze elevation, precipitation, and climate.</li>
 <li>In the case of Palo, I use kmean-rasters compared with Landsat band calculating the flooding cells shared by each layers.</li>
 <li>And I extracted a specific location captured by the drone from layers to define its value in the raster data.</li>
 </ul>
-<p>Here is my highlight in the project: <img src="img/geo13-lab05highlight.png" /></p>
+<p>Here is my highlight in the project: <a href="https://jiwonbaik96.github.io/geog-13-labs/lab-05.html" target="_blank" title="click this image to open sourcecode"><img src="img/geo13-lab05highlight.png" /></a></p>
 <hr />
 <p>In the <strong>lab06</strong>, terrain analysis is managed by R coding. We chose Mission Creek’s flood event in 2017 as object, estimating the number of buildings impacted. In the project, I completed the whole analysis from collecting data to the assessment of impacts.</p>
 </div>
 
 
 
+</div>
+</div>
 
 </div>
 
@@ -381,7 +453,7 @@ $(document).ready(function () {
 
 // add bootstrap table styles to pandoc tables
 function bootstrapStylePandocTables() {
-  $('tr.header').parent('thead').parent('table').addClass('table table-condensed');
+  $('tr.odd').parent('tbody').parent('table').addClass('table table-condensed');
 }
 $(document).ready(function () {
   bootstrapStylePandocTables();
@@ -399,13 +471,42 @@ $(document).ready(function () {
 
 $(document).ready(function () {
   $('.tabset-dropdown > .nav-tabs > li').click(function () {
-    $(this).parent().toggleClass('nav-tabs-open')
+    $(this).parent().toggleClass('nav-tabs-open');
   });
 });
 </script>
 
 <!-- code folding -->
 
+<script>
+$(document).ready(function ()  {
+
+    // temporarily add toc-ignore selector to headers for the consistency with Pandoc
+    $('.unlisted.unnumbered').addClass('toc-ignore')
+
+    // move toc-ignore selectors from section div to header
+    $('div.section.toc-ignore')
+        .removeClass('toc-ignore')
+        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
+
+    // establish options
+    var options = {
+      selectors: "h1,h2,h3",
+      theme: "bootstrap3",
+      context: '.toc-content',
+      hashGenerator: function (text) {
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
+      },
+      ignoreSelector: ".toc-ignore",
+      scrollTo: 0
+    };
+    options.showAndHide = true;
+    options.smoothScroll = true;
+
+    // tocify
+    var toc = $("#TOC").tocify(options).data("toc-tocify");
+});
+</script>
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
